--- a/apps/codingcatdev/src/app.postcss
+++ b/apps/codingcatdev/src/app.postcss
@@ -1,4 +1,14 @@
-/* Write your global styles here, in PostCSS syntax */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    .vertical-clip {
+    background-color: hsl(var(--ac));
+    background: radial-gradient(
+      46.71% 197.88% at 50% 43.5%,
+      hsl(var(--p)) 0%,
+      hsl(var(--s)) 100%
+    );
+  }
+}
